--- a/config/database.yml
+++ b/config/database.yml
@@ -23,6 +23,13 @@ default: &default
 
 development:
   <<: *default
+  development:
+  adapter: postgresql
+  encoding: unicode
+  host: localhost
+  pool: 5
+  username: subhampadhi
+  password: 
   database: blog_development
 
   # The specified database role being used to connect to postgres.
